page on sundar pichai

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello coursera</title>
+	<title>PICHAI SUNDARAJAN</title>
 </head>
 <body>
-<h1>Hello gangadhar its great to meet you</h1>
+	<h1>Education</h1>
+	<p>sundar studies his graduation at iit kharagpur in the field mme and he did his masters in meterial engeneering.
+    He also compleated his MBA.he joined google in 2004. He developed google mail and search engine. He became ceo of
+    google in 2014.He became board of members of alphabet in 2017.</p>
 </body>
 </html>
