used html,css and javascript

--- a/site/index.html
+++ b/site/index.html
@@ -4,15 +4,16 @@
 	<title>PICHAI SUNDARAJAN</title>
 </head>
 <body>
-	<h1>Education</h1>
+	<h1 style="color: red; font-size: 60px; text-align: center;">Education</h1>
 	<p>sundar studies his graduation at iit kharagpur in the field mme and he did his masters in meterial engeneering.
     He also compleated his MBA.he joined google in 2004. He developed google mail and search engine. He became ceo of
     google in 2014.He became board of members of alphabet in 2017.</p>
     <footer>
-    	<p>for technical support contact
+    	<p style="text-align: center;"
+    	onclick="alert('Cant find the number');">for technical support contact
     	phone number:9390633050
         name: G.hema vardhan reddy
         department: cse</p>
-    </footer>>
+    </footer>
 </body>
 </html>
