--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
     google in 2014.He became board of members of alphabet in 2017.</p>
     <footer>
     	<p style="text-align: center;"
-    	onclick="alert('Cant find the number');">for technical support contact
+    	onclick="alert('contact gangadhar');">for technical support contact
     	phone number:9390633050
         name: G.hema vardhan reddy
         department: cse</p>
