--- a/site/index.html
+++ b/site/index.html
@@ -4,16 +4,32 @@
 	<title>PICHAI SUNDARAJAN</title>
 </head>
 <body>
-	<h1 style="color: red; font-size: 60px; text-align: center;">Education</h1>
+	
+
+	<h1 style="color: green; font-size: 60px; text-align: center;">Education</h1>
+	
+
+
+
 	<p>sundar studies his graduation at iit kharagpur in the field mme and he did his masters in meterial engeneering.
     He also compleated his MBA.he joined google in 2004. He developed google mail and search engine. He became ceo of
     google in 2014.He became board of members of alphabet in 2017.</p>
+    
+
+    <aside>we are discussing about sundar pichai -google pichai</aside>
+
+
+
+
     <footer>
     	<p style="text-align: center;"
-    	onclick="alert('contact gangadhar');">for technical support contact
-    	phone number:9390633050
-        name: G.hema vardhan reddy
-        department: cse</p>
+    	onclick="alert('contact gangadhar');">for technical support contact</p>
+    	<p style="text-align: center;"
+    	onclick="alert('contact gangadhar');">phone number:9390633050</p>
+        <p style="text-align: center;"
+    	onclick="alert('contact gangadhar');">name: G.hema vardhan reddy</p>
+        <p style="text-align: center;"
+    	onclick="alert('contact gangadhar');">department: cse</p>
     </footer>
 </body>
 </html>
