--- a/site/index.html
+++ b/site/index.html
@@ -23,13 +23,10 @@
 
     <footer>
     	<p style="text-align: center;"
-    	onclick="alert('contact gangadhar');">for technical support contact</p>
-    	<p style="text-align: center;"
-    	onclick="alert('contact gangadhar');">phone number:9390633050</p>
-        <p style="text-align: center;"
-    	onclick="alert('contact gangadhar');">name: G.hema vardhan reddy</p>
-        <p style="text-align: center;"
-    	onclick="alert('contact gangadhar');">department: cse</p>
+    	onclick="alert('contact gangadhar department mechanical');">for technical support contact</p>
+    	<p style="text-align: center;">phone number:9390633050</p>
+        <p style="text-align: center;">name: G.hema vardhan reddy</p>
+        <p style="text-align: center;">department: cse</p>
     </footer>
 </body>
 </html>
