--- a/site/index.html
+++ b/site/index.html
@@ -7,13 +7,12 @@
 	<header>we are discussing about sundar ji <nav>https://www.youtube.com/watch?v=PZHYd-LafBo</nav> 
 	this link navigates you to sundar pichai life story</header>
 
-	<h1 style="color: green; font-size: 60px; text-align: center;">Education</h1>
+	<h1 style="color: green; font-size: 60px; background-image: sundar.jpg">Education</h1>
 	
 
 
 
-	<p style="font-style: italic; margin: 20px;">sundar studies his graduation at iit kharagpur in the field mme and he did his masters in meterial engeneering.
-    He also compleated his MBA.he joined google in 2004. He developed google mail and search engine. He became ceo of
+	<p style="font-style: italic; margin: 20px;">sundar studies his graduation at iit kharagpur in the field mme and he did his masters in meterial engeneering.He also compleated his MBA.he joined google in 2004. He developed google mail and search engine. He became ceo of
     google in 2014.He became board of members of alphabet in 2017.</p>
     
 
