--- a/site/index.html
+++ b/site/index.html
@@ -4,10 +4,8 @@
 	<title>PICHAI SUNDARAJAN</title>
 </head>
 <body>
-	<header>we are discussing about sundar ji <nav>https://www.youtube.com/watch?v=PZHYd-LafBo</nav> 
-	this link navigates you to sundar pichai life story</header>
 
-	<h1 style="color: green; font-size: 60px; background-image: sundar.jpg">Education</h1>
+	<h1 style="color: green; font-size: 60px;">Education</h1>
 	
 
 
