--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
 	<h1 style="color: green; font-size: 60px;">Education</h1>
 	
 
-	<ul>
+	<ul style="color: red; font-size: 40px">
 		<li>education</li>
 		<li>personal life
 		<ul>
