--- a/site/index.html
+++ b/site/index.html
@@ -4,10 +4,10 @@
 	<title>PICHAI SUNDARAJAN</title>
 </head>
 <body>
-
+	<a href="index.html" title="Education"></a>
+	<a href="index.html" title="Education">
 	<h1 style="color: green; font-size: 60px;">Education</h1>
 	
-
 	<ul style="color: red; font-size: 30px">
 		<li>education</li>
 		<li>personal life
@@ -22,7 +22,7 @@
 	<p style="font-style: italic; margin: 20px;">sundar studies his graduation at iit kharagpur in the field mme and he did his masters in meterial engeneering.He also compleated his MBA.he joined google in 2004. He developed google mail and search engine. He became ceo of
     google in 2014.He became board of members of alphabet in 2017.</p>
     
-
+	</a>
     <aside>we are discussing about sundar pichai -google pichai</aside>
 
 
