added the home button

--- a/site/linking.html
+++ b/site/linking.html
@@ -6,5 +6,6 @@
 <body>
 	<title>Education</title>
 <h1>Hello bittu education meaning is to know something more about a perticular doubt</h1>
+<a href="index.html" title="home"></a>
 </body>
 </html>
