--- a/site/linking.html
+++ b/site/linking.html
@@ -7,5 +7,6 @@
 	<title>Education</title>
 <h1>Hello bittu education meaning is to know something more about a perticular doubt</h1>
 <a href="index.html" title="home"></a>
+<a href="index.html" title="home">Home page</a>
 </body>
 </html>
